# finalproject_Pankratova_Anastasiya_M55-255

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  session.cast
data/: portfolios.json  rates.json  users.json
valutatrade_hub/: decorators.py  logging_config.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py  utils.py
valutatrade_hub/infra/: __init__.py  database.py  settings.py
valutatrade_hub/parser_service/: api_clients.py  config.py  storage.py  updater.py
